<resources>
    <string name="app_name">Repositorio</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Abecedario</string>
    <string name="tab_text_3">Formaciones</string>
    <string name="logosena">TODO</string>
    <string name="Repositorio_de_Señas">Repositorio De Señas</string>
    <string name="tecnicas">Técnicas Del SENA</string>
    <string name="siguiente">SIGUIENTE ➡</string>
    <string name="tv1">MainActivity</string>
    <string name="fabicon">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Produccion Multimedia</string>
    <string name="title_activity_produccion_multimedia">ProduccionMultimediaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Repositorio De Señas Técnicas Del SENA</string>
    <string name="nav_header_subtitle">Seccion: Produccion Multimedia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="affter_effects">Affter Effects</string>
    <string name="aplicaciones">Aplicaciones</string>
    <string name="analisis">Analisis</string>
    <string name="archivo">Archivo</string>
    <string name="area">Area De Trabajo</string>
    <string name="barrad">Barra De Desplazamiento</string>
    <string name="barram">Barra De Menus</string>
    <string name="bases">Bases De Datos</string>
    <string name="brief">Brief</string>
    <string name="capas">Capas</string>
    <string name="captura">Captura De Pantalla</string>
    <string name="composicion">Composicion</string>
    <string name="controladores">Controladores</string>
    <string name="css">Css</string>
    <string name="efectos">Efectos</string>
    <string name="escritorio">Escritorio</string>
    <string name="fotograma">Fotograma Keyframe</string>
    <string name="gps">Gps</string>
    <string name="guion">Guion Literario</string>
    <string name="herramientas">Herramientas</string>
    <string name="icono">Icono</string>
    <string name="vectorial">Imagen Vectorial</string>
    <string name="imagotipo">Imagotipo</string>
    <string name="imagen">Insertar Imagen</string>
    <string name="logo">Logo</string>
    <string name="jerarquico">Mapa De Navegacion Jerarquico</string>
    <string name="lineal">Mapa De Navegacion Lineal</string>
    <string name="objetos">Objetos 3D</string>
    <string name="online">Online Web</string>
    <string name="panelh">Panel De Herramientas</string>
    <string name="panelp">Panel De Proyectos</string>
    <string name="paneles">Paneles</string>
    <string name="pistaaudio">Pistas De Audio</string>
    <string name="pistavideo">Pistas De Video</string>
    <string name="pixel">Pixel</string>
    <string name="plano">Plano</string>
    <string name="pluma">Pluma</string>
    <string name="propiedades">Propiedades</string>
    <string name="prototipo">Prototipó</string>
    <string name="puntero">Puntero</string>
    <string name="rgb">R.G.B</string>
    <string name="resolucion">Resolucion</string>
    <string name="rotacion">Rotacion</string>
    <string name="sms">S.M.S</string>
    <string name="slider">Slider Web</string>
    <string name="storyboard">StoryBoard</string>
    <string name="telefono">Telefono Inteligente</string>
    <string name="fuente">Tipo De Fuente</string>
    <string name="tipop">Tipo De Plano</string>
    <string name="transiciones">Transiciones</string>
    <string name="varita">Varita Magica</string>
    <string name="master">Web Master</string>
    <string name="service">Web Service</string>
    <string name="zoom">Zoom</string>
    <string name="title_activity_menu">Menu_Activity</string>
    <string name="menu_home">Affter Effects</string>
    <string name="menu_gallery">Analisis</string>
    <string name="menu_slideshow">Aplicaciones</string>
    <string name="menu_archivo">Archivo</string>
    <string name="menu_areadetrabajo">Area De Trabajo</string>
    <string name="menu_barradedesplazamiento">Barra De Desplazamiento</string>
    <string name="menu_barrasdemenu">Barra De Menus</string>
    <string name="menu_basesdedatos">Bases De Datos</string>
    <string name="menu_brief">Brief</string>
    <string name="inicio">Inicio</string>
    <string name="senaa">A</string>
    <string name="senab">B</string>
    <string name="senac">C</string>
    <string name="senad">D</string>
    <string name="senae">E</string>
    <string name="senaf">F</string>
    <string name="senag">G</string>
    <string name="senah">H</string>
    <string name="senai">I</string>
    <string name="senaj">J</string>
    <string name="senak">K</string>
    <string name="senal">L</string>
    <string name="senam">M</string>
    <string name="senan">N</string>
    <string name="senann">NN</string>
    <string name="senao">O</string>
    <string name="senap">P</string>
    <string name="senaq">Q</string>
    <string name="senar">R</string>
    <string name="senas">S</string>
    <string name="senat">T</string>
    <string name="senau">U</string>
    <string name="senav">V</string>
    <string name="senaw">W</string>
    <string name="senax">X</string>
    <string name="senay">Y</string>
    <string name="senaz">Z</string>
    <string name="produccion_multimedia">Produccion Multimedia</string>
    <string name="ir">IR</string>
    <string name="senaproduccion">SENAPRODUCCION</string>
    <string name="construccion">Construccion</string>
    <string name="hseq">HSEQ</string>
    <string name="afftereffects">AFFTER EFFECTS</string>
    <string name="area_de_trabajo">Area De Trabajo</string>
    <string name="barra_de_desplazamiento">Barra De Desplazamiento</string>
    <string name="barra_de_menus">Barra De Menus</string>
    <string name="bases_de_datos">Bases De Datos</string>
    <string name="todo">TODO</string>
    <string name="comenzar">▶ COMENZAR</string>
    <string name="senaorange">SENA</string>
    <string name="seccionp">◼ Seccion: Produccion Multimedia</string>
    <string name="vista">"👁️ Vistas: 0 "</string>
    <string name="retroceso">↩ RETORNO</string>
    <string name="senablanco">BLANCO</string>
    <string name="mintrabajo">MINTRABAJO</string>
    <string name="trabajo">Trabajo</string>
    <string name="title_activity_construccion">ActivityConstruccion</string>
    <string name="cemento">Cemento</string>
    <string name="Columna">Columna</string>
    <string name="Concreto">Concreto</string>
    <string name="ingenierocivil">Ingeniero Civil</string>
    <string name="ingeniero">Ingeniero</string>
    <string name="nsr10">Nsr10</string>
    <string name="plano1">Plano</string>
    <string name="proyecto">Proyecto</string>
    <string name="prueba">Prueba</string>
    <string name="reparar">Reparar</string>
    <string name="resolucion1">Resolucion</string>
    <string name="solido">Solido</string>
    <string name="suelo">Suelo</string>
    <string name="unidad">Unidad</string>
    <string name="vigas">Vigas</string>
    <string name="zapata">Zapata</string>


</resources>